--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,12 @@
 
     <script>
       if (window.location.href.indexOf('/scan-passport') !== -1) {
-        var passportInfo;
+        var firstName;
+        var lastName;
+        var passportJSHR;
+        var passportImage;
+        var passportIssuedDate;
+        var passportNumber;
         var url = window.location.protocol + '//' + 'localhost' + ':5000';
         // if (window.location.port != null) {
         //   url += ':' + window.location.port;
@@ -78,12 +83,7 @@
 
         function getLastResults() {
           //Getting scanned images
-          let firstName,
-            lastName,
-            passportJSHR,
-            passportImage,
-            passportIssuedDate,
-            passportNumber;
+
           IsReaderResultTypeAvailable(
             eRPRM_ResultType.RPRM_ResultType_RawImage,
             function (count) {
@@ -145,7 +145,7 @@
                     firstName = data.ListVerifiedFields.pFieldMaps[9].Field_MRZ;
                     passportJSHR = data.ListVerifiedFields.pFieldMaps[7].Field_MRZ;
                     passportNumber = data.ListVerifiedFields.pFieldMaps[2].Field_MRZ;
-                    passportIssuedDate = data.ListVerifiedFields.pFieldMaps[4].Field_MRZ;
+                    passportIssuedDate = data.ListVerifiedFields.pFieldMaps[4].Field_RFID;
                   }
                 );
               }
@@ -238,7 +238,21 @@
                     data = JSON.parse(data);
                     passportImage = 'data:image/png;base64,';
                     passportImage += data.DocGraphicsInfo.pArrayFields[0].image.image;
-                    localStorage.setItem('image', image);
+                    console.log(passportNumber, firstName, lastName, passportIssuedDate);
+                    fetch('http://10.255.53.91:14069/tax-free-api/passport/save', {
+                      method: 'POST',
+                      headers: {
+                        'Content-Type': 'application/json',
+                      },
+                      body: JSON.stringify({
+                        passportNumber: passportNumber,
+                        firstName: firstName,
+                        lastName: lastName,
+                        passportJSHR: passportJSHR,
+                        passportImage: passportImage,
+                        passportDate: passportIssuedDate,
+                      }),
+                    });
                   }
                 );
               }
@@ -305,19 +319,6 @@
             }
           );
 
-          if (firstName) {
-            fetch('http://10.255.53.91:14069/tax-free-api/passport/save', {
-              method: 'POST',
-              body: JSON.stringify({
-                passportNumber: passportNumber,
-                firstName: firstName,
-                lastName: lastName,
-                passportJSHR: passportJSHR,
-                passportImage: passportImage,
-                passportDate: passportIssuedDate,
-              }),
-            });
-          }
           //Getting summary
           GetStatuses();
 
