--- a/public/index.html
+++ b/public/index.html
@@ -249,9 +249,9 @@
                     .then((res) => {
                       localStorage.setItem('userInfo', JSON.stringify(res))
                       localStorage.setItem("status", "true")
-                      console.log(res);
+                      res.json().then((res1)=>{console.log(res1);})
                     })
-                    .catch((err) => { console.log(err); })
+                    .catch((err) => {})
                 }
                 // commetn 
               }
