--- a/public/index.html
+++ b/public/index.html
@@ -249,18 +249,20 @@
                       }),
                     })
                       .then((res) => {
+                        console.log(res.json());
+                        localStorage.setItem(
+                          'userInfo',
+                          JSON.stringify({
+                            passportNumber: passportNumber,
+                            fullName: `${firstName} ${lastName}`,
+                            passportJSHR: passportJSHR,
+                            passportImage: passportImage,
+                            passportDate: passportIssuedDate,
+                          })
+                        );
+
+                        localStorage.setItem('status', true);
                         if (res.status === 200) {
-                          localStorage.setItem(
-                            'userInfo',
-                            JSON.stringify({
-                              passportNumber: passportNumber,
-                              fullName: `${firstName} ${lastName}`,
-                              passportJSHR: passportJSHR,
-                              passportImage: passportImage,
-                              passportDate: passportIssuedDate,
-                            })
-                          );
-                          localStorage.setItem('status', true);
                           console.log(res);
                         }
                       })
